--- a/packages/css/styles.css
+++ b/packages/css/styles.css
@@ -150,6 +150,10 @@ img {
   margin-bottom: 40px;
 }
 
+.qualification section{
+  padding: 6rem 0 2rem;;
+}
+
 .section__title {
   font-size: var(--h1-font-size);
 }
@@ -528,7 +532,7 @@ img {
 }
 
 .skills__sql{
-  width: 80%;
+  width: 90%;
 }
 
 .skills__nodejs{
